<resources>
    <string name="app_name">Crawler</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="history">History</string>
    <string name="select_all">Select All</string>
    <string name="loading">Loading…</string>

    <string name="permission_denied">Not granted required permissions</string>

    <string name="exit_title">Exit App</string>
    <string name="exit_delay_tip">Press again to exit</string>

    <string name="empty_task_tip">No Active Task</string>

    <plurals name="selection_title">
        <item quantity="one">1 ITEM</item>
        <item quantity="other">%1$d ITEMS</item>
    </plurals>
    <plurals name="delete_task_tip">
        <item quantity="one">Delete 1 task?\nUndone task will be cancelled.</item>
        <item quantity="other">Delete %1$d tasks?\nAll undone tasks will be cancelled.</item>
    </plurals>

    <string name="activity_new_task_title">New</string>

    <string name="new_task_details">Details</string>
    <string name="new_task_url_hint">URL of book details</string>
    <string name="new_task_format">Format</string>
    <string name="new_task_output">Output</string>
    <string name="new_task_backup">Backup book when fetched</string>
    <string name="new_task_overview">Overview</string>
    <string name="new_task_fetch_error">Failed to fetch book</string>
    <string name="new_task_overview_tip">No book fetched</string>
    <string name="new_task_invalid_url">URL is invalid</string>
    <string name="new_task_invalid_output">Output is invalid</string>
    <string name="exit_cancel_tip">Some tasks are not completed, cancel them?</string>
    <string name="details">Details</string>
</resources>
