<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_start"
        android:icon="@mipmap/ic_play"
        android:title="@string/start"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_pause"
        android:icon="@mipmap/ic_pause"
        android:title="@string/pause"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@mipmap/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@mipmap/ic_select_all"
        android:title="@string/select_all"
        app:showAsAction="always" />
</menu>
