<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pw.phylame.crawling.activity.CrawlerActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@mipmap/ic_add_file"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@mipmap/ic_edit_column"
        android:orderInCategory="101"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="103"
        android:title="@string/exit" />
</menu>
